<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema" ?>
<package format="3">

    <name>fenswood_drone_controller</name>
    <version>0.0.0</version>
    <description>Example Python controller for ArduPilot at Fenswood</description>
    <maintainer email="robert.clarke@bristol.ac.uk">Robert Clarke</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_python</buildtool_depend>
    
    <depend>rclpy</depend>

    <depend>mavros_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>

</package>